# fix-imports

./: .gitignore  .travis.yml  README  README.md  TODO  cabal.project  changelog.md  dot-fix-imports  fix-imports.cabal  stack.yaml  vimrc
src/: .fix-imports  Config.hs  Config_test.hs  FixImports.hs  FixImports_test.hs  Index.hs  Main.hs  RunTests.hs  Types.hs  Util.hs
src/FixImports/: Config.hs  Config_test.hs  FixImports.hs  FixImports_test.hs  Format.hs  Format_test.hs  Index.hs  Main.hs  Parse.hs  Parse_test.hs  PkgCache.hs  Types.hs  Util.hs
test/: Broken.hs  Fixity.hs  Module.hs  run
test/comments/: Main.hs  expected
test/cpp/: Main.hs
test/error/: expected
test/format/: Main.hs  expected
test/include/: Main.hs  expected  flags
test/nondecreasing-indent/: expected
test/prelude-add/: Main.hs
test/prelude-remove/: Main.hs
test/priority/: Main.hs  expected
test/simple/: Main.hs  expected
test/sort/: .fix-imports  ALocal.hs  BLocal.hs  Main.hs  expected
test/two-dots/: Main.hs  expected
test/two-dots/A/B/: C.hs
test/unqualified-import/: Main.hs  expected
