name: fix-imports
version: 1.1.0
cabal-version: >= 1.10
build-type: Simple
synopsis: Program to manage the imports of a haskell module
description:
    fix-imports is a small standalone program to manage the import block of a
    haskell program.  It will try to add import lines for qualified names
    with no corresponding import, remove unused import lines, and sort the
    import block according to some heuristic you can define.  This only works
    for qualified imports!  Unqualified imports are left untouched.
    .
    It's most convenient if bound to an editor key.  See the included vimrc
    for an example.  You may have to cabal unpack or git clone to see it.

category: Editor, Haskell, IDE
license: BSD3
license-file: LICENSE
author: Evan Laforge
maintainer: Evan Laforge <qdunkan@gmail.com>
stability: stable
tested-with: GHC>=8.0.2
data-files: README, vimrc
extra-source-files:
    src/*.hs
    changelog.md
    vimrc
    dot-fix-imports

source-repository head
    type: git
    location: git://github.com/elaforge/fix-imports.git

executable fix-imports
    main-is: Main.hs
    other-modules: Config, FixImports, Index, Types, Util
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >= 3 && < 5
        , containers
        , cpphs
        , directory
        , filepath
        , haskell-src-exts >= 1.16.0
        , process
        , split
        , text
        , time
        , uniplate
    ghc-options: -Wall -fno-warn-name-shadowing

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: src
    main-is: RunTests.hs
    default-language: Haskell2010
    build-depends:
        base >= 3 && < 5
        , containers
        , cpphs
        , directory
        , filepath
        , haskell-src-exts >= 1.16.0
        , mtl
        , process
        , split
        , text
        , time
        , uniplate

        , test-karya
    other-modules:
        Config
        Config_test
        FixImports
        FixImports_test
        Index
        Types
        Util
