name: fix-imports
version: 2.3.0
cabal-version: >= 1.10
build-type: Simple
synopsis: Program to manage the imports of a haskell module
description:
    `fix-imports` is a small standalone program to manage the import block of
    a haskell program.  It will try to add import lines for qualified names
    with no corresponding import, remove unused import lines, and keep the
    import block sorted, with optional rules for grouping.
    .
    Support for unqualified imports is limited to symbols you explicitly
    configure, so if you list `System.FilePath.(</>)`, it will add that import
    when you use it, or remove when it's no longer used, but it won't go search
    modules for unqualified imports.
    .
    It doesn't mess with non-managed unqualified imports, so you can still use
    unqualified imports, you just have to do it manually.
    .
    Since it's a unix-style filter, it should be possible to integrate into any
    editor.  There's an example vimrc to bind to a key in vim.

category: Editor, Haskell, IDE
license: BSD3
license-file: LICENSE
author: Evan Laforge
maintainer: Evan Laforge <qdunkan@gmail.com>
stability: stable
tested-with: GHC == 8.4.2
extra-source-files:
    README.md
    changelog.md
    dot-fix-imports
    vimrc

source-repository head
    type: git
    location: git://github.com/elaforge/fix-imports.git

executable fix-imports
    main-is: FixImports/Main.hs
    other-modules:
        FixImports.Config
        FixImports.FixImports
        FixImports.Format
        FixImports.Index
        FixImports.Parse
        FixImports.Types
        FixImports.Util
        Paths_fix_imports
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >= 3 && < 5
        , containers
        , cpphs
        , deepseq
        , directory
        , filepath
        -- 8.10 doesn't want to build with ghc 9.2 for some reason,
        -- but ghc-lib-parser 9.2 also doesn't build with 9.2 at the moment.
        -- I think the module structure totally changed anyway so it'll
        -- be a ton of work to update.
        -- , ghc-lib-parser == 9.2.2.20220307
        -- , ghc-lib-parser-ex ==  9.2.0.2
        , ghc-lib-parser == 8.10.5.20210606
        , ghc-lib-parser-ex == 8.10.0.21
        , mtl
        , pretty
        , process
        , split
        , text
        , time
        , uniplate
    ghc-options:
        -main-is FixImports.Main
        -Wall
        -fno-warn-name-shadowing

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: src
    main-is: RunTests.hs
    default-language: Haskell2010
    build-depends:
        base >= 3 && < 5
        , containers
        , cpphs
        , deepseq
        , directory
        , filepath
        , ghc-lib-parser == 8.10.5.20210606
        , ghc-lib-parser-ex == 8.10.0.21
        , mtl
        , pretty
        , process
        , split
        , text
        , time
        , uniplate

        , test-karya
    other-modules:
        FixImports.Config
        FixImports.Config_test
        FixImports.FixImports
        FixImports.FixImports_test
        FixImports.Index
        FixImports.Types
        FixImports.Util
